# sorcery

./: .gitignore  .~lock.UML_Final.pdf#  .~lock.final_document.docx#  Plan of Attack.docx  README.md  SorceryUML.xml  UML_Final.odg  bonus.txt  final_document.docx  sorcery.code-workspace  ~$an of Attack.docx  ~$nal_document.docx  ~WRL0003.tmp  ~WRL1377.tmp
source/: .gitignore  .nfs000000000388ad58000c1f97  AddEnchant.cc  AddMinionRitual.cc  AddPlayerRitual.cc  AddRitualSpell.cc  AddSpell.cc  AdderActive.cc  AdderTriggered.cc  Air Elemental.card  Apprentice Summoner.ability  Apprentice Summoner.card  Aura of Power.card  Banish.card  Banish.card.txt  Blizzard.card  Blizzard.card.txt  Bone Golem.card  CMakeLists.txt  Dark Ritual.card  Disenchant.card  Disenchant.card.txt  Earth Elemental.card  Enrage.card  Fire Elemental.ability  Fire Elemental.card  Giant Strength.card  Haste.card  Magic Fatigue.card  Makefile  Master Summoner.ability  Master Summoner.card  MoveAddSpell.cc  MoveRitual.cc  MoveSpell.cc  NotMySorcery.cc  Novice Pyromancer.ability  Novice Pyromancer.card  Potion Seller.ability  Potion Seller.card  (+53 more)
source/tests/: errorhandling.test  handsboard.test  playcards.test
